# validator-circuits

./: .gitignore  Cargo.toml  README.md  rust-toolchain
examples/: generate_commitment.rs  prove_attestations.rs  prove_batch.rs  prove_full.rs  prove_participation.rs  prove_validators_update.rs
examples/utils/: mod.rs
groth16-wrapper/: go.mod  go.sum  main.go
poseidon-bn128/: Cargo.toml
poseidon-bn128/src/: lib.rs  poseidon_bn128.rs  poseidon_bn128_constants.rs
src/: accounts.rs  circuits.rs  commitment.rs  epochs.rs  lib.rs  participation.rs  prover.rs  validators.rs
src/bn128_wrapper/: mod.rs  wrapper_circuit.rs
src/circuits/: aggregator_circuit.rs  attestation_aggregation_circuit.rs  attestations_aggregator1_circuit.rs  attestations_aggregator2_circuit.rs  attestations_aggregator3_circuit.rs  batch_circuit.rs  mod.rs  participation_circuit.rs  participation_state_circuit.rs  sha256_circuit.rs  state_update_circuit.rs  utils.rs  validator_participation_circuit.rs  validators_state_circuit.rs  validators_update_circuit.rs  wrappers.rs
src/circuits/attestation_aggregation_circuit/: attestation_aggregator_first_stage_circuit.rs  attestation_aggregator_second_stage_circuit.rs  attestation_aggregator_third_stage_circuit.rs  mod.rs  subcircuits.rs
src/circuits/attestations_aggregator_circuit/: attestations_aggregator1_circuit.rs  attestations_aggregator2_circuit.rs  attestations_aggregator3_circuit.rs  mod.rs
src/circuits/participation_state_circuit/: circuit.rs  proof.rs  targets.rs  witness.rs
src/circuits/serialization/: mod.rs
src/circuits/utils/: extensions.rs  serialization.rs
src/circuits/validator_participation_circuit/: mod.rs  subcircuits.rs  validator_participation_aggregator_circuit.rs  validator_participation_aggregator_end_circuit.rs
src/circuits/validators_state_circuit/: circuit.rs  proof.rs  targets.rs  witness.rs
src/groth16_wrapper/: mod.rs
src/wrapper/: plonky2_config.rs  poseidon_bn128.rs  wrap.rs  wrap2.rs
(+31 files in other folders)
