[package]
name = "validator-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
blake3 = "1.5.1"
ff = { package = "ff", version = "0.13", features = ["derive"] }
jemallocator = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.21"
num = { version = "0.4", default-features = false }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git" }
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0.1"
