[package]
name = "poseidon_bn128"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = { package = "ff", version = "0.13", features = ["derive"] }
lazy_static = "1.4.0"
num = { version = "0.4", default-features = false }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", tag = "v0.2.3" }
serde = "1.0"
serde_json = "1.0"
